--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 </head>
   <body>
     <div id="root"></div>
+    <!-- 保留原有入口，核心逻辑移到 index.tsx 中 -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
